# steam-reporter

./: .gitignore  LICENSE  README.md  config.py  email_parser.py  pyproject.toml  setup.py  steam-reporter.py
default/: config.ini
steam-reporter/: __main__.py  command_args.py  config.py  steam-reporter.py  steam_reporter.py
steam_reporter/: config.py  email_parser.py  steam_reporter.py
steam_reporter/config/: config.ini
