[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steam_reporter"
version = "1.1.0"
description = "A python tool for parsing and storing transaction information from steam market emails."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["keyring", "python-dateutil"]

[project.urls]
"Homepage" = "https://github.com/bweissinger/steam-reporter"

[project.scripts]
steam_reporter = "steam_reporter.steam_reporter:main"
